[package]
name = "analyser"
version = "0.2.0"
authors = ["Arpad Ray <arpad@repography.com>"]
edition = "2021"
description = "The CLI to analyse a local Git repo and submit the metadata to Repography.com"
homepage = "https://repography.com/"

[[bin]]
name ="analyser"
path = "src/main.rs"

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
cbc = "0.1.2"
chrono = "0.4.26"
pbr = "1.1.1"
dialoguer = "0.10.4"
anyhow = "1.0.72"
thiserror = "1.0.44"
flate2 = "1.0.26"
generic-array = "0.14.7"
getrandom = "0.2.10"
git2 = { version = "0.17.2", default-features = false, optional = true }
lazy_static = "1.4.0"
log = "0.4.19"
env_logger = "0.10.0"
regex = { version = "1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subprocess = { version = "^0.2.9", optional = true }
tempdir = "0.3.7"
time = "0.3.23"
url = "2"
attohttpc = { version = "0.25.0", features = ["tls-rustls"], default-features = false }
uuid = { version = "1.4.1", features = ["v4"] }
zstd = "0.12.4"
clap = { version = "4.3.19", features = ["derive"] }

[features]
default = ["git"]
git = ["subprocess"]
git-libgit2 = ["git2"]

[profile.release]
lto = "fat"
debug = 0
panic = "abort"
opt-level = "z"
codegen-units = 1
